Testing on controllers